Adopt moar JDK 11 goodies