@@ -44,7 +44,7 @@ public class BrokenInterwikiLinksAPI extends HttpServlet {
 		String limitParam = request.getParameter("limit");
 		final String emptyResult = "{\"results\":[]}";
 		
-		if (searchParam == null || searchParam.trim().isEmpty() || searchParam.contains("|")) {
+		if (searchParam == null || searchParam.isBlank() || searchParam.contains("|")) {
 			response.getWriter().append(emptyResult);
 			return;
 		}
